--- a/PruebaIngenieria/html/home.html
+++ b/PruebaIngenieria/html/home.html
@@ -1,13 +1,5 @@
-{% load staticfiles %}
+{% extends "base.html" %}
+{% block content %}
+<h1>Bienvenido usuario Desconocido</h1>
+{% endblock %}
 
-<!DOCTYPE html>
-<html>
-<head>
-<link href="{% static 'bootstrap/css/bootstrap.min.css' %}"
-      rel="stylesheet" media="screen">
-</head>
-<body>
-	<h1>Bienvenido</h1>
-	
-</body>
-</html>
