--- a/PruebaIngenieria/html/nuevo_usuario.html
+++ b/PruebaIngenieria/html/nuevo_usuario.html
@@ -1,12 +1,5 @@
-{% load staticfiles %}
-
-<!DOCTYPE html>
-<html>
-<head>
-<link href="{% static 'bootstrap/css/bootstrap.min.css' %}"
-      rel="stylesheet" media="screen">
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 	<h1>Nuevo Usuario</h1>
 	<div class="container" style="width:52%">
 	<form action="/crear_usuario/" method="POST">
@@ -32,5 +25,4 @@
 		<input type="submit">
 	</form>
 	</div>
-</body>
-</html>
+{% endblock %}
