Modulo de Gestion de Usuarios Completo

--- a/PruebaIngenieria/html/base.html
+++ b/PruebaIngenieria/html/base.html
@@ -2,17 +2,48 @@
 <html lang="en">
 <head>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="{{STATIC_URL}}css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{STATIC_URL}}bootstrap/css/bootstrap.min.css">
     <!-- Optional theme -->
-    <link rel="stylesheet" href="{{STATIC_URL}}css/bootstrap-theme.min.css"> 
-    <link rel="stylesheet" href="{{STATIC_URL}}css/styles.css">     
+    <link rel="stylesheet" href="{{STATIC_URL}}bootstrap/css/bootstrap-theme.min.css"> 
+    <link rel="stylesheet" href="{{STATIC_URL}}bootstrap/css/styles.css">     
     
     <title>{% block title %}Miscelanea{% endblock %}</title>
 </head>
 <body>
-    {% block content %}{% endblock %}
+<div class="container">
+    <div class="row">
+        <div class="col-sm-18">
+        <nav class="navbar navbar-default" role="navigation">
+          <div class="container-fluid">          
+            <div class="navbar-header pull-right">
+              <a class="navbar-brand navbar-btn" href="/">Miscelanea</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            	<ul class="nav navbar-nav pull-right">
+                    <li>
+                        <div class="btn-lg navbar-btn">
+                        <a class="" href="/">
+                        	<span class="glyphicon glyphicon-home"></span>
+                        </a>
+                        </div>
+                    </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+        </div>
+    </div>
+    <div class="row">
+        <div id="content">
+            {% block content %}{% endblock %}
+        </div>
+    </div>
+</div>
+<br>
+<br>
+<br>
 </body>
-<script src="{{STATIC_URL}}js/jquery.min.js"></script>
-<script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
+<script src="{{STATIC_URL}}bootstrap/js/jquery.min.js"></script>
+<script src="{{STATIC_URL}}bootstrap/js/bootstrap.min.js"></script>
 </html>
-</html>
+
