Gestionar Canasto + remover Producto

--- a/PruebaIngenieria/html/home.html
+++ b/PruebaIngenieria/html/home.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Bienvenido usuario Desconocido</h1>
-{% endblock %}
+<h1>Bienvenido, Operario</h1>
+<div class="container" style="width:60%">
+    <ul class="nav nav-pills nav-stacked">
+      <li><a href="/gestion_ventas/"><h3><center>GESTIONAR VENTA</center></h3></a></li>
+    </ul>
+</div>
 
+{% endblock %}
