--- a/PruebaIngenieria/html/gestion_categorias.html
+++ b/PruebaIngenieria/html/gestion_categorias.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container" style="width:60%">
+    <h3>Gestión de Categorias</h3>
     <form action="/nueva_categoria/" method="GET">
     <button type="submit" class="btn btn-default pull-right" alt="Agregar categoria">
         <span class="glyphicon glyphicon-plus"></span>
